# blogrs

./: Cargo.toml  Dockerfile
example/: test.md
example/even-or-odd/: metadata.toml  post.md
example/hatred-of-css/: metadata.toml  post.md
example/my-first-post/: metadata.toml  post.md
example/sorting/: metadata.toml  post.md
src/: bootstrap_parser.rs  main.rs  md.rs
static/: bootstrap.min.css
templates/: base.html  feed.html  markdown.html
