[package]
name = "rustmdb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = "0.12.1"
axum = "0.6.20"
pulldown-cmark = { version = "0.9.3", default-features = false, features = ["simd"] }
tokio = { version = "1", features = ["full"]}
walkdir = "2"
