[package]
name = "rustmdb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = "0.12.1"
axum = "0.6.20"
chrono = "0.4"
pulldown-cmark = { version = "0.9.3", default-features = false, features = ["simd"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"]}
toml = "0.8.8"
tower-http = { version = "0.4.4", features = ["fs"] }
walkdir = "2"
